Fix: remove /api/auth/v1/ou/{ou}/roles/custom endpoint
